posts: add first posts

--- a/public/notas/index.html
+++ b/public/notas/index.html
@@ -29,7 +29,7 @@
   
     
       <div class="background-container">
-        <div class="background" style="background-image: url(/images/background.gif)">
+        <div class="background" style="background-image: url(/images/background.svg)">
         </div>
       </div>
     
@@ -220,8 +220,8 @@
       </main>
     </section>
     <footer>
-      <p><small>Feito por mim.</small></p>
-<p><small>© 2024.</small></p>
+      <p><small>Powered by <a href="https://gohugo.io/">Hugo</a> &amp <a href="https://github.com/icarochiabai/wings">Wings</a></small></p>
+<p><small>© 2024 Coisas de Ícaro</small></p>
 
     </footer>
   </div>
